Fix font size and alignment after merging with styling changes

--- a/pathmind-webapp/frontend/styles/views/experiment-view.css
+++ b/pathmind-webapp/frontend/styles/views/experiment-view.css
@@ -28,7 +28,7 @@
     flex: 1;
     width: 100%;
     max-height: calc(1.8em * 20);
-    font-size: var(--lumo-font-size-s);
+    font-size: var(--lumo-font-size-xs);
     line-height: 1.8;
     padding: var(--lumo-space-s);
     padding-top: 0;
@@ -61,6 +61,10 @@
     background-color: white;
 }
 
+.experiment-view .metrics-wrapper .header span {
+    justify-content: flex-end;
+}
+
 .experiment-view .simulation-metrics-table-wrapper .header .helper-icon {
     flex-shrink: 0;
     margin-left: var(--lumo-space-xxs);
@@ -89,7 +93,6 @@
     align-items: center;
     flex: 1 0 auto;
     height: 2rem;
-    font-size: var(--lumo-font-size-xs);
     line-height: 1;
     margin-left: var(--lumo-space-s);
 }
